Course 3/exercise-2/template.yml
Parameters:
  EnvironmentName:
    Description: Environment name?
    Type: String
    Default: Course3Exercise3
  VpcID:
    Description: VPC ID
    Type: String
  SubnetID:
    Description: subnet for the instance
    Type: String
  ImageID:
    Description: AMI ID
    Type: String

Resources:
  WebServerSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: security group for web servers
      GroupName: WebSG
      SecurityGroupIngress: 
      - IpProtocol: tcp
        CidrIp: 0.0.0.0/0
        Description: allow access incoming traffic
        FromPort: 80
        ToPort: 80
      - IpProtocol: tcp
        CidrIp: 0.0.0.0/0
        Description: allow access incoming traffic
        FromPort: 3000
        ToPort: 3000
      - IpProtocol: tcp
        CidrIp: 0.0.0.0/0
        Description: allow access via ssh terminal
        FromPort: 22  
        ToPort: 22  
      SecurityGroupEgress: 
      - IpProtocol: tcp
        CidrIp: 0.0.0.0/0
        Description: permit all outgoing traffic from all ports
        FromPort: 0
        ToPort: 65535
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} web servers security group
      VpcId: !Ref VpcID

  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      ImageId: !Ref ImageID
      NetworkInterfaces:
        - AssociatePublicIpAddress: "true"
          DeviceIndex: "0"
          GroupSet:
            - !Ref WebServerSG
          SubnetId: !Ref SubnetID
      KeyName: course3
      Tags:
        - Key: Name
          Value: Course3EC2

Outputs:
  InstanceIP:
    Value: !GetAtt EC2Instance.PublicDnsName
    Export:
      Name: InstanceDNS
